# reconecta-front

./: Dockerfile  appimage.sh  index.html  nginx.conf  package-lock.json  package.json  password.txt  private_key.pem  public_key.pem  tailwind.config.js  vite.config.js
.github/workflows/: cd.yaml  cd_dev.yaml  publish.yml  release.yml  update.yml  windows.yml
public/: firebase-messaging-sw.js
scripts/: sign.js  sign.mjs
src/: App.css  App.jsx  firebase.js  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/keys/: keyPrivate.pem  myapp.key  myapp.key.pub
src-tauri/src/: lib.rs  main.rs
src/components/CardCustom/: index.jsx
src/components/Charts/: index.jsx
src/components/CustomSwitch/: CustomSwitch.jsx
src/components/Graphs/: barchart.jsx  linechart.jsx
src/components/ListIcon/: index.jsx
src/components/Loader/: Loader.module.css  index.jsx
src/components/LoadingTable/: index.jsx
src/components/SwalLoader/: SwalLoader.jsx
src/components/TableCustom/: index.jsx
src/components/TimePickerCustom/: index.jsx
src/context/: MainContext.jsx
src/hooks/: useUpdater.js
src/modules/Abm/utils/: data.js
src/modules/Abm/views/: index.jsx
src/modules/AbmDevice/views/: index.jsx
src/modules/AbmEquipament/views/: index.jsx
src/modules/Binnacle/: index.jsx
src/modules/NotFound/: index.jsx
src/modules/Notification/: index.jsx
src/storage/: cookies-store.js  storage.jsx
src/utils/js/: formatDate.js  minio.js  request.js  updateSwal.js
src/utils/routes/: app.routes.js
(+345 files in other folders)
